--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
 	<link rel="stylesheet" href="style.css" />
 </head>
 <body>
-	<iframe src="silence.mp3" allow="autoplay" id="audio" style="display: none"></iframe>
-    <audio autoplay loop>
+    <audio autoplay loop controls>
         <source src="audio/John Mayer - Changing (Audio).mp3" type="audio/mp3">
     </audio>
     <div class="hbd">
