--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 <body>
     <audio controls>
-        <source src="audio/John Mayer - Changing (Audio).mp3" type="audio/mp3">
+        <source src="changing.mp3" type="audio/mp3">
     </audio>
     <div class="hbd">
         <h1>Happy Birthday Jaymes!</h1>
