--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <audio controls autoplay loop>
+    <audio controls>
         <source src="changing.mp3" type="audio/mp3">
     </audio>
     <div class="hbd">
