--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
 	<link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <audio controls>
-        <source src="changing.mp3" type="audio/mpeg">
-    </audio>
+    <audio controls src="changing.mp3"></audio>
     <div class="hbd">
         <h1>Happy Birthday Jaymes!</h1>
         <h2>This is our core memory guide, now digitalized😻</h2>
