--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <audio controls src="changing.mp3"></audio>
+    <audio autoplay loop src="audio/changing.mp3"></audio>
     <div class="hbd">
         <h1>Happy Birthday Jaymes!</h1>
         <h2>This is our core memory guide, now digitalized😻</h2>
