--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
 	<link rel="stylesheet" href="style.css" />
 </head>
 <body>
+	<audio src="/audio/changing.mp3" autoplay>
+		<p>If you are reading this, it is because your browser does not support the audio element.</p>
+		<embed src="/audio/changing.mp3" width="180" height="90" hidden="true" />
+	</audio>
     <div class="hbd">
         <h1>Happy Birthday Jaymes!</h1>
         <h2>This is our core memory guide, now digitalized😻</h2>
