--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 	<link rel="stylesheet" href="style.css" />
 </head>
 <body>
-	<audio src="/audio/changing.mp3" autoplay>
-		<p>If you are reading this, it is because your browser does not support the audio element.</p>
-		<embed src="/audio/changing.mp3" width="180" height="90" hidden="true" />
+	<audio controls autoplay loop>
+  		<source src="audio/changing.mp3" type="audio/mp3">
+  		<embed src="audio/changing.mp3" autostart="true" loop="true" hidden="true"> 
 	</audio>
     <div class="hbd">
         <h1>Happy Birthday Jaymes!</h1>
