--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body>
 	<audio controls autoplay loop>
   		<source src="audio/changing.mp3" type="audio/mp3">
-  		<embed src="audio/changing.mp3" autostart="true" loop="true" hidden="false"> 
+  		<embed src="audio/changing.mp3" autostart="true" loop="true" hidden="true"> 
 	</audio>
     <div class="hbd">
         <h1>Happy Birthday Jaymes!</h1>
